// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nNotice > props > content > should render HTML 1`] = `
"<aside id="notice" class="notice notice warning" role="alert">
  <div class="notice-content"><span class="n8n-text compact size-small regular"><span id="notice-content" class="truncated" role="region"><a href="https://example.com">Hello world!</a> This is a notice.</span></span></div>
</aside>"
`;

exports[`components > N8nNotice > props > content > should render correctly with content prop 1`] = `
"<aside id="notice" class="notice notice warning" role="alert">
  <div class="notice-content">
    <n8n-text-stub bold="false" size="small" compact="true" tag="span"></n8n-text-stub>
  </div>
</aside>"
`;

exports[`components > N8nNotice > props > content > should sanitize rendered HTML 1`] = `
"<aside id="notice" class="notice notice warning" role="alert">
  <div class="notice-content">
    <n8n-text-stub bold="false" size="small" compact="true" tag="span"></n8n-text-stub>
  </div>
</aside>"
`;

exports[`components > N8nNotice > should render correctly 1`] = `
"<aside id="notice" class="notice notice warning" role="alert">
  <div class="notice-content">
    <n8n-text-stub bold="false" size="small" compact="true" tag="span"></n8n-text-stub>
  </div>
</aside>"
`;
